add booking modal

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material/tooltip": "^14.0.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
+    "@react-spring/web": "^9.7.1",
     "@tanstack/react-query": "^4.20.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
